--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -876,11 +876,26 @@ p {
   padding: 0 10px 0 10px;
 }
 .daily-retro .DailyRetro {
-  height: 100vh;
+  height: 100%;
   width: 100%;
 }
+.daily-retro .DailyRetro .slide {
+  height: 100%;
+}
+.daily-retro .DailyRetro .slide .carousel-inner {
+  height: 100%;
+}
+.daily-retro .DailyRetro .slide .carousel-inner .carousel-item {
+  height: 100%;
+}
+.daily-retro .DailyRetro .slide .carousel-inner .carousel-item.active {
+  height: 100%;
+}
+.daily-retro .DailyRetro .metric-slide {
+  height: 100%;
+}
 .daily-retro .DailyRetro .metric-slide .slide-nav {
-  height: 100px;
+  height: 70px;
   border-bottom: black solid 2px;
   display: flex;
   flex-direction: row;
@@ -904,7 +919,7 @@ p {
   font-weight: 700;
 }
 .daily-retro .DailyRetro .metric-slide .slide-content {
-  height: 75vh;
+  height: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -915,7 +930,7 @@ p {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 .daily-retro .DailyRetro .metric-slide .slide-content .slide-card a {
@@ -938,8 +953,8 @@ p {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 30px;
   box-shadow: 10px 10px;
+  margin-bottom: 40px;
 }
 .daily-retro .DailyRetro .metric-slide .slide-content .slide-card .metric-card h3 {
   font-size: 32px;
@@ -956,7 +971,7 @@ p {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  height: 325px;
+  height: 225px;
 }
 .daily-retro .DailyRetro .metric-slide .slide-content .slide-card .metric-card .metrics-card-content img {
   max-width: 90%;
